@@ -1,3 +1,8 @@
+2010-04-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/43570
+	* testsuite/libgomp.fortran/vla8.f90: New test.
+
 2010-04-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR libgomp/43706
